ECA-1198: admin-GUI for publisher queue process service.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@7338 37aeb1de-b14b-0410-9a0e-82b28170d228